# life_gacha

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  userdata.sql
gacha/: Cargo.toml  backup.sql  userdata.sql
gacha/src/: main.rs
gacha_ui/: Cargo.toml  flake.nix
gacha_ui/.direnv/: flake-profile-1d5ac1db870b70984ab488934f060f9ab3870c7b  flake-profile-1d5ac1db870b70984ab488934f060f9ab3870c7b.rc
gacha_ui/.direnv/flake-inputs/: kgp2lkqawayipws2p64flyp06sgzzf0r-source  xgc5dj0dzwjkn6s5fmzd2c5j6wxihs9r-source  ysg6gwjymrjgnh68cz68m8g03l2vac4d-source
gacha_ui/src-tauri/: tauri.conf.json
gacha_ui/ui/: package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
gacha_ui/ui/src/: main.ts  style.css
