[package]
name = "life_gacha"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
        "gacha_protocol",
        "gacha",
        "gacha_ui",
        "gacha_ui/src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = [ "derive" ] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde_json = "1"
thiserror = "2"
rand = "0.9.2"
tokio = {version = "1.49.0", features = ["full"]}
axum = "0.8.8"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4.43", features = ["serde"] }

[dependencies]
