[package]
name = "gacha"
version = "0.1.0"
edition = "2024"

[dependencies]
gacha_protocol = { path = "../gacha_protocol" }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
